RESOLVED FIXED294357
AX: A Grid with the child row in a shadow root does not work in safari+VO
https://bugs.webkit.org/show_bug.cgi?id=294357
Summary AX: A Grid with the child row in a shadow root does not work in safari+VO
James Nurthen
Reported 2025-06-11 16:54:21 PDT
Created attachment 475540 [details] Simplified HTML file which shows the issue When you have the following type of structure in the DOM `<div role="grid"> #shadow-root <div role="row"> .... the rest of the grid </div> </div>` then VO with safari only sees an empty table. This structure works fine with Chrome+VO, Chrome+NVDA and FF+NVDA Try to read the grid using Safari+VO in the attached html
Attachments
Simplified HTML file which shows the issue (1.46 KB, text/html)
2025-06-11 16:54 PDT, James Nurthen
no flags
Radar WebKit Bug Importer
Comment 1 2025-06-11 16:54:35 PDT
Tyler Wilcock
Comment 2 2026-01-23 22:25:40 PST
EWS
Comment 3 2026-01-24 12:29:35 PST
merge-queue failed to commit PR to repository. To retry, remove any blocking labels and re-apply merge-queue label
EWS
Comment 4 2026-01-24 13:32:15 PST
merge-queue failed to commit PR to repository. To retry, remove any blocking labels and re-apply merge-queue label
EWS
Comment 5 2026-01-24 22:18:58 PST
Committed 306159@main (717acb6d9ec5): <https://commits.webkit.org/306159@main> Reviewed commits have been landed. Closing PR #57169 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.