AX: A Grid with the child row in a shadow root does not work in safari+VO https://bugs.webkit.org/show_bug.cgi?id=294357 rdar://153134654

Reviewed by Chris Fleizach.

Prior to this commit, grids and tables whose child rows were in the
shadow DOM were not properly accounted for when building the
accessibility table cell slots, making them inaccessible to ATs. Fix
this by walking the composed tree when looking through table descendant
in computeCellSlots.

* LayoutTests/accessibility/shadow-dom-aria-grid-expected.txt: Added.
* LayoutTests/accessibility/shadow-dom-aria-grid.html: Added.
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::computeCellSlots):

Canonical link: https://commits.webkit.org/306159@main